--- a/package.json
+++ b/package.json
@@ -1,22 +1,62 @@
 {
   "name": "locallytics",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "version": "0.0.1",
+  "description": "Analytics that live with your app.",
+  "license": "MIT",
   "type": "module",
-  "devDependencies": {
-    "@types/node": "^24.9.1",
-    "tsup": "^8.5.0",
-    "typescript": "^5.9.3",
-    "zod": "^4.1.12"
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
-  "dependencies": {
-    "react": "^19.2.0"
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "types": [
+      "node",
+      "react",
+      "react-dom"
+    ]
+  },
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint . --ext .ts,.tsx --fix --config eslint.config.js",
+    "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
+    "check-format": "prettier --check \"**/*.{ts,tsx,json,md}\"",
+    "check-lint": "eslint . --ext .ts,.tsx --config eslint.config.js",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
+  },
+  "peerDependencies": {
+    "react": ">=18"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.4.2",
+    "tsup": "^8.0.0",
+    "typescript": "^5.0.0",
+    "zod": "^3.22.0"
   }
 }
