--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
     "zod": "^3.22.0"
+  },
+  "dependencies": {
+    "kysely": "^0.28.8"
   }
 }
