--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
@@ -60,6 +61,7 @@
     "zod": "^3.22.0"
   },
   "dependencies": {
-    "kysely": "^0.28.8"
+    "kysely": "^0.28.8",
+    "pg": "^8.13.1"
   }
 }
