--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "kysely": "^0.28.8",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "semantic-release": "^24.2.9"
   }
 }
