--- a/package.json
+++ b/package.json
@@ -1,64 +1,18 @@
 {
-  "name": "locallytics",
-  "version": "0.0.2",
-  "description": "Analytics that live with your app.",
-  "license": "MIT",
-  "type": "module",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "sideEffects": false,
-  "files": [
-    "dist"
+  "name": "locallytics-monorepo",
+  "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "types": [
-      "node",
-      "react",
-      "react-dom"
-    ]
-  },
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "prepublishOnly": "npm run build",
-    "lint": "eslint . --ext .ts,.tsx --fix --config eslint.config.js",
-    "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
-    "check-format": "prettier --check \"**/*.{ts,tsx,json,md}\"",
-    "check-lint": "eslint . --ext .ts,.tsx --config eslint.config.js"
-  },
-  "peerDependencies": {
-    "react": ">=18"
+    "build": "npm run build --workspaces",
+    "dev": "npm run dev -w packages/locallytics",
+    "lint": "npm run lint --workspaces",
+    "format": "npm run format --workspaces",
+    "test": "npm test --workspaces"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/pg": "^8.15.5",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.38.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react-hooks": "^7.0.0",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "prettier": "^3.4.2",
-    "tsup": "^8.0.0",
-    "typescript": "^5.0.0",
-    "zod": "^3.22.0"
-  },
-  "dependencies": {
-    "kysely": "^0.28.8",
-    "pg": "^8.13.1",
-    "semantic-release": "^24.2.9"
+    "typescript": "^5.0.0"
   }
 }
