--- a/package.json
+++ b/package.json
@@ -10,9 +10,40 @@
     "dev": "npm run dev -w packages/locallytics",
     "lint": "npm run lint --workspaces",
     "format": "npm run format --workspaces",
-    "test": "npm test --workspaces"
+    "test": "npm test --workspaces",
+    "semantic-release": "semantic-release"
+  },
+  "release": {
+    "branches": ["main"],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      ["@semantic-release/npm", {
+        "pkgRoot": "packages/locallytics"
+      }],
+      ["@semantic-release/github", {
+        "assets": [
+          { "path": "packages/locallytics/dist/**/*.js" },
+          { "path": "packages/locallytics/dist/**/*.d.ts" },
+          { "path": "packages/locallytics/package.json" }
+        ]
+      }],
+      ["@semantic-release/git", {
+        "assets": [
+          "package.json",
+          "packages/*/package.json"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }]
+    ]
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "semantic-release": "^22.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.0",
+    "@semantic-release/npm": "^10.0.0",
+    "@semantic-release/commit-analyzer": "^10.0.0",
+    "@semantic-release/release-notes-generator": "^11.0.0"
   }
 }
