--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,10 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/locallytics
+        
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,19 +25,20 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: 'packages/locallytics/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build packages
-        run: npm run build --workspaces --if-present
+      - name: Build package
+        run: npm run build
 
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm install -g semantic-release @semantic-release/git @semantic-release/github @semantic-release/npm @semantic-release/commit-analyzer @semantic-release/release-notes-generator
+          npm install
           npx semantic-release
 
 permissions:
