--- a/packages/locallytics/package.json
+++ b/packages/locallytics/package.json
@@ -57,6 +57,8 @@
     "zod": "^3.22.0"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.4.1",
     "kysely": "^0.28.8",
     "pg": "^8.13.1",
     "semantic-release": "^24.2.9"
