--- a/package.json
+++ b/package.json
@@ -14,36 +14,54 @@
     "semantic-release": "semantic-release"
   },
   "release": {
-    "branches": ["main"],
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      ["@semantic-release/npm", {
-        "pkgRoot": "packages/locallytics"
-      }],
-      ["@semantic-release/github", {
-        "assets": [
-          { "path": "packages/locallytics/dist/**/*.js" },
-          { "path": "packages/locallytics/dist/**/*.d.ts" },
-          { "path": "packages/locallytics/package.json" }
-        ]
-      }],
-      ["@semantic-release/git", {
-        "assets": [
-          "package.json",
-          "packages/*/package.json"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }]
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "packages/locallytics"
+        }
+      ],
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "packages/locallytics/dist/**/*.js"
+            },
+            {
+              "path": "packages/locallytics/dist/**/*.d.ts"
+            },
+            {
+              "path": "packages/locallytics/package.json"
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json",
+            "packages/*/package.json"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ]
     ]
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "semantic-release": "^22.0.0",
+    "@semantic-release/commit-analyzer": "^10.0.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.0",
     "@semantic-release/npm": "^10.0.0",
-    "@semantic-release/commit-analyzer": "^10.0.0",
-    "@semantic-release/release-notes-generator": "^11.0.0"
+    "@semantic-release/release-notes-generator": "^11.0.0",
+    "dotenv": "^17.2.3",
+    "semantic-release": "^22.0.0",
+    "typescript": "^5.0.0"
   }
 }
