--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,10 +26,15 @@
     "format": "prettier --write \"**/*.{ts,json,md}\""
   },
   "dependencies": {
-    "commander": "^12.0.0"
+    "better-sqlite3": "^12.4.1",
+    "commander": "^12.0.0",
+    "dotenv": "^17.2.3",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.15.5",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0"
   }
