--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "fumadocs-core": "16.0.2",
     "fumadocs-mdx": "13.0.0",
     "fumadocs-ui": "16.0.2",
