--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,42 +6,26 @@ on:
       - main
 
 jobs:
-  release:
-    name: Release
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./packages/locallytics
-        
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v3
         with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN }}
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 'packages/locallytics/package-lock.json'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build package
-        run: npm run build
-
-      - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Bump version & push
         run: |
-          npm install
-          npx semantic-release
+          git config --global user.name 'Automated publish'
+          git config --global user.email '$aidankmcalister@users.noreply.github.com'
 
-permissions:
-  contents: write
-  issues: write
-  pull-requests: write
+          npm version patch
+          git push --follow-tags
+
+      - name: Publish to NPM
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
