--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,27 +6,46 @@ on:
       - main
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
         with:
-          node-version: "16.x"
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Bump version & push
+      - name: Configure Git
         run: |
-          git config --global user.name 'Automated publish'
-          git config --global user.email '$aidankmcalister@users.noreply.github.com'
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
 
-          npm version patch
-          git push --follow-tags
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Publish to NPM
-        run: npm publish
+      - name: Build packages
+        run: npm run build --workspaces
+
+      - name: Publish packages
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        run: |
+          # Publish the main package
+          cd packages/locallytics
+          npm version patch --no-git-tag-version
+          npm publish --access public
+
+          # Publish the CLI package
+          cd ../cli
+          npm version patch --no-git-tag-version
+          npm publish --access public
+
+          # Commit version changes
+          cd ../..
+          git add .
+          git commit -m "chore: release new versions"
+          git push
