--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: "20"
           registry-url: "https://registry.npmjs.org"
+          cache: "npm"
 
       - name: Configure Git
         run: |
@@ -25,7 +26,9 @@ jobs:
           git config --global user.email 'actions@github.com'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install
+          npm install -g npm@latest
 
       - name: Build packages
         run: npm run build --workspaces
