--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,31 @@
-name: Release
+name: Publish Packages
 
 on:
+  workflow_dispatch: # Allows manual triggering
   push:
     branches:
       - main
+    paths:
+      - "packages/**/package.json"
+      - ".github/workflows/publish.yml"
 
 jobs:
-  release:
+  publish:
+    name: Publish Packages
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           registry-url: "https://registry.npmjs.org"
@@ -27,28 +38,32 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
+          npm ci
           npm install -g npm@latest
 
       - name: Build packages
         run: npm run build --workspaces
 
-      - name: Publish packages
+      - name: Publish @locallytics/cli
+        working-directory: ./packages/cli
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          # Publish the main package
-          cd packages/locallytics
           npm version patch --no-git-tag-version
-          npm publish --access public
+          npm publish --access public --registry=https://registry.npmjs.org/
 
-          # Publish the CLI package
-          cd ../cli
+      - name: Publish locallytics
+        working-directory: ./packages/locallytics
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
           npm version patch --no-git-tag-version
-          npm publish --access public
+          npm publish --access public --registry=https://registry.npmjs.org/
 
-          # Commit version changes
-          cd ../..
+      - name: Commit version updates
+        run: |
           git add .
-          git commit -m "chore: release new versions"
-          git push
+          git diff --quiet && git diff --staged --quiet || \
+          (git commit -m "chore(release): publish packages" && git push)
