--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,9 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "packages/**/package.json"
-      - ".github/workflows/publish.yml"
+    # paths:
+    #   - "packages/**/package.json"
+    #   - ".github/workflows/publish.yml"
 
 jobs:
   publish:
