--- a/packages/locallytics/package.json
+++ b/packages/locallytics/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@locallytics/locallytics",
+  "name": "locallytics",
   "version": "0.0.3",
   "description": "Analytics that live with your app.",
   "license": "MIT",
@@ -15,6 +15,9 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
+  "bin": {
+    "locallytics": "./dist/cli.js"
+  },
   "files": [
     "dist"
   ],
@@ -61,6 +64,8 @@
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "better-sqlite3": "^12.4.1",
+    "commander": "^12.0.0",
+    "dotenv": "^17.2.3",
     "kysely": "^0.28.8",
     "pg": "^8.13.1",
     "semantic-release": "^24.2.9"
