--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@semantic-release/release-notes-generator": "^11.0.0",
     "dotenv": "^17.2.3",
     "semantic-release": "^22.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^4.0.3"
   }
 }
